@@ -2,20 +2,20 @@ package de.sub.goobi.forms;
 
 /**
  * This file is part of the Goobi Application - a Workflow tool for the support of mass digitization.
- * 
+ * <p>
  * Visit the websites for more information.
- *             - https://goobi.io
- *             - https://www.intranda.com
- * 
+ * - https://goobi.io
+ * - https://www.intranda.com
+ * <p>
  * This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free
  * Software Foundation; either version 2 of the License, or (at your option) any later version.
- * 
+ * <p>
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
  * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- * 
+ * <p>
  * You should have received a copy of the GNU General Public License along with this program; if not, write to the Free Software Foundation, Inc., 59
  * Temple Place, Suite 330, Boston, MA 02111-1307 USA
- * 
+ * <p>
  * Linking this library statically or dynamically with other modules is making a combined work based on this library. Thus, the terms and conditions
  * of the GNU General Public License cover the whole combination. As a special exception, the copyright holders of this library give you permission to
  * link this library with independent modules to produce an executable, regardless of the license terms of these independent modules, and to copy and
@@ -44,6 +44,7 @@ import java.util.Map.Entry;
 import java.util.StringTokenizer;
 import java.util.TreeSet;
 import java.util.regex.PatternSyntaxException;
+import java.util.stream.Collectors;
 
 import javax.enterprise.inject.Default;
 import javax.faces.model.SelectItem;
@@ -74,11 +75,9 @@ import org.goobi.production.enums.UserRole;
 import org.goobi.production.flow.jobs.HistoryAnalyserJob;
 import org.goobi.production.plugin.interfaces.IOpacPlugin;
 import org.goobi.production.plugin.interfaces.IOpacPluginVersion2;
+import org.goobi.production.properties.AccessCondition;
 import org.goobi.production.properties.ProcessProperty;
 import org.goobi.production.properties.PropertyParser;
-import org.goobi.vocabulary.Field;
-import org.goobi.vocabulary.VocabRecord;
-import org.goobi.vocabulary.Vocabulary;
 import org.jdom2.Document;
 import org.jdom2.Element;
 import org.jdom2.JDOMException;
@@ -108,10 +107,12 @@ import de.sub.goobi.persistence.managers.ProcessManager;
 import de.sub.goobi.persistence.managers.ProjectManager;
 import de.sub.goobi.persistence.managers.RulesetManager;
 import de.sub.goobi.persistence.managers.StepManager;
-import de.sub.goobi.persistence.managers.VocabularyManager;
 import de.unigoettingen.sub.search.opac.ConfigOpac;
 import de.unigoettingen.sub.search.opac.ConfigOpacCatalogue;
 import de.unigoettingen.sub.search.opac.ConfigOpacDoctype;
+import io.goobi.vocabulary.exchange.Vocabulary;
+import io.goobi.workflow.api.vocabulary.VocabularyAPIManager;
+import io.goobi.workflow.api.vocabulary.helper.ExtendedVocabularyRecord;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
@@ -141,7 +142,7 @@ import ugh.fileformats.mets.XStream;
 @Log4j2
 public class ProzesskopieForm implements Serializable {
     /**
-     * 
+     *
      */
     private static final long serialVersionUID = 2579641488883675182L;
     private Helper help = new Helper();
@@ -475,23 +476,21 @@ public class ProzesskopieForm implements Serializable {
 
         String vocabularyTitle = item.getString("@vocabulary");
         if (StringUtils.isNotBlank(vocabularyTitle)) {
-            Vocabulary currentVocabulary = VocabularyManager.getVocabularyByTitle(vocabularyTitle);
-            if (currentVocabulary != null && currentVocabulary.getId() != null) {
-                VocabularyManager.getAllRecords(currentVocabulary);
-                List<VocabRecord> recordList = currentVocabulary.getRecords();
-                Collections.sort(recordList);
-                List<SelectItem> selectItems = new ArrayList<>(recordList.size());
-                for (VocabRecord vr : recordList) {
-                    for (Field f : vr.getFields()) {
-                        if (f.getDefinition().isMainEntry()) {
-                            selectItems.add(new SelectItem(f.getValue(), f.getValue()));
-                            break;
-                        }
-                    }
-                }
-                fa.setSelectList(selectItems);
-            }
+            Vocabulary vocabulary = VocabularyAPIManager.getInstance().vocabularies().findByName(vocabularyTitle);
+            List<ExtendedVocabularyRecord> records = VocabularyAPIManager.getInstance()
+                    .vocabularyRecords()
+                    .list(vocabulary.getId())
+                    .all()
+                    .request()
+                    .getContent();
+            fa.setSelectList(
+                    records.stream()
+                            .map(ExtendedVocabularyRecord::getMainValue)
+                            .sorted()
+                            .map(v -> new SelectItem(v, v))
+                            .collect(Collectors.toList()));
         }
+        // TODO: FIX
         return fa;
     }
 
@@ -567,7 +566,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * die Eingabefelder für die Eigenschaften mit Inhalten aus der RDF-Datei füllen
-     * 
+     *
      * @throws PreferencesException
      */
     private void fillFieldsFromMetadataFile() throws PreferencesException {
@@ -666,7 +665,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * Auswahl des Processes auswerten
-     * 
+     *
      * @throws DAOException
      * @throws NamingException
      * @throws SQLException ============================================================== ==
@@ -691,25 +690,32 @@ public class ProzesskopieForm implements Serializable {
         if (tempProcess.getEigenschaftenSize() > 0) {
             fillTemplateFromProperties(tempProcess);
         }
+
         try {
             this.myRdf = tempProcess.readMetadataAsTemplateFile();
+
+            /* falls ein erstes Kind vorhanden ist, sind die Collectionen dafür */
+            try {
+                DocStruct colStruct = this.myRdf.getDigitalDocument().getLogicalDocStruct();
+
+                List<Metadata> firstChildMetadata =
+                        colStruct.getAllChildren().isEmpty() ? Collections.emptyList() : colStruct.getAllChildren().get(0).getAllMetadata();
+                fillTemplateFromMetadata(colStruct.getAllMetadata(), firstChildMetadata);
+
+                removeCollections(colStruct);
+                colStruct = colStruct.getAllChildren().get(0);
+                removeCollections(colStruct);
+            } catch (PreferencesException e) {
+                Helper.setFehlerMeldung("Error on creating process", e);
+                log.error("Error on creating process", e);
+            } catch (RuntimeException e) {
+                e.printStackTrace();
+                /*
+                 * das Firstchild unterhalb des Topstructs konnte nicht ermittelt werden
+                 */
+            }
         } catch (Exception e) {
             Helper.setFehlerMeldung("Error on reading template-metadata ", e);
-        }
-
-        /* falls ein erstes Kind vorhanden ist, sind die Collectionen dafür */
-        try {
-            DocStruct colStruct = this.myRdf.getDigitalDocument().getLogicalDocStruct();
-            removeCollections(colStruct);
-            colStruct = colStruct.getAllChildren().get(0);
-            removeCollections(colStruct);
-        } catch (PreferencesException e) {
-            Helper.setFehlerMeldung("Error on creating process", e);
-            log.error("Error on creating process", e);
-        } catch (RuntimeException e) {
-            /*
-             * das Firstchild unterhalb des Topstructs konnte nicht ermittelt werden
-             */
         }
 
         return "";
@@ -719,14 +725,7 @@ public class ProzesskopieForm implements Serializable {
         for (Processproperty pe : tempProcess.getEigenschaften()) {
             for (AdditionalField field : this.additionalFields) {
                 if (field.getTitel().equals(pe.getTitel())) {
-                    // multiselect
-                    if (field.isMultiselect()) {
-                        List<String> existingValues = field.getValues();
-                        existingValues.add(pe.getWert());
-                        field.setValues(existingValues);
-                    } else {
-                        field.setWert(pe.getWert());
-                    }
+                    setFieldValue(field, pe.getWert());
                 }
             }
             if ("digitalCollection".equals(pe.getTitel())) {
@@ -741,14 +740,7 @@ public class ProzesskopieForm implements Serializable {
         for (Templateproperty eig : vor.getEigenschaften()) {
             for (AdditionalField field : this.additionalFields) {
                 if (field.getTitel().equals(eig.getTitel())) {
-                    // multiselect
-                    if (field.isMultiselect()) {
-                        List<String> existingValues = field.getValues();
-                        existingValues.add(eig.getWert());
-                        field.setValues(existingValues);
-                    } else {
-                        field.setWert(eig.getWert());
-                    }
+                    setFieldValue(field, eig.getWert());
                 }
             }
         }
@@ -759,14 +751,7 @@ public class ProzesskopieForm implements Serializable {
         for (Masterpieceproperty eig : werk.getEigenschaften()) {
             for (AdditionalField field : this.additionalFields) {
                 if (field.getTitel().equals(eig.getTitel())) {
-                    // multiselect
-                    if (field.isMultiselect()) {
-                        List<String> existingValues = new ArrayList<>(field.getValues());
-                        existingValues.add(eig.getWert());
-                        field.setValues(existingValues);
-                    } else {
-                        field.setWert(eig.getWert());
-                    }
+                    setFieldValue(field, eig.getWert());
                 }
                 if ("DocType".equals(eig.getTitel())) {
                     docType = eig.getWert();
@@ -775,9 +760,37 @@ public class ProzesskopieForm implements Serializable {
         }
     }
 
+    private void fillTemplateFromMetadata(List<Metadata> topstruct, List<Metadata> firstChild) {
+        for (Metadata m : topstruct) {
+            this.additionalFields.stream()
+                    .filter(f -> "topstruct".equals(f.getDocstruct()))
+                    .filter(f -> f.getMetadata() != null && f.getMetadata().equals(m.getType().getName()))
+                    .findFirst()
+                    .ifPresent(f -> setFieldValue(f, m.getValue()));
+        }
+
+        for (Metadata m : firstChild) {
+            this.additionalFields.stream()
+                    .filter(f -> "firstchild".equals(f.getDocstruct()))
+                    .filter(f -> f.getMetadata() != null && f.getMetadata().equals(m.getType().getName()))
+                    .findFirst()
+                    .ifPresent(f -> setFieldValue(f, m.getValue()));
+        }
+    }
+
+    private void setFieldValue(AdditionalField field, String value) {
+        if (field.isMultiselect()) {
+            List<String> existingValues = field.getValues();
+            existingValues.add(value);
+            field.setValues(existingValues);
+        } else {
+            field.setWert(value);
+        }
+    }
+
     /**
      * Validierung der Eingaben
-     * 
+     *
      * @return sind Fehler bei den Eingaben vorhanden? ================================================================
      */
     private boolean isContentValid() {
@@ -822,14 +835,26 @@ public class ProzesskopieForm implements Serializable {
          * -------------------------------- Prüfung der additional-Eingaben, die angegeben werden müssen --------------------------------
          */
         for (AdditionalField field : this.additionalFields) {
-            if ((field.getWert() == null || "".equals(field.getWert())) && field.isRequired() && field.getShowDependingOnDoctype(getDocType())
-                    && (StringUtils.isBlank(field.getWert()))) {
+            if ((field.getWert() == null || field.getWert().isBlank()) && field.isRequired() && field.getShowDependingOnDoctype(getDocType())) {
                 valide = false;
                 Helper.setFehlerMeldung(Helper.getTranslation("UnvollstaendigeDaten") + " " + field.getTitel() + " "
                         + Helper.getTranslation("ProcessCreationErrorFieldIsEmpty"));
 
             }
         }
+
+        // property validation
+
+        for (ProcessProperty pt : configuredProperties) {
+            if (!pt.isValid()
+                    || (AccessCondition.WRITEREQUIRED.equals(pt.getShowProcessGroupAccessCondition())
+                            && StringUtils.isBlank(pt.getValue()))) {
+                Helper.setFehlerMeldung(Helper.getTranslation("UnvollstaendigeDaten") + " " + pt.getName() + " "
+                        + Helper.getTranslation("ProcessCreationErrorFieldIsEmpty"));
+            }
+
+        }
+
         return valide;
     }
 
@@ -841,7 +866,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * print the infos of the existing process
-     * 
+     *
      * @param processName title that has already been used by some process
      */
     @SuppressWarnings("unused")
@@ -912,7 +937,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * Anlegen des Processes und Speichern der Metadaten ================================================================
-     * 
+     *
      * @throws DAOException
      * @throws SwapException
      * @throws WriteException
@@ -1452,7 +1477,7 @@ public class ProzesskopieForm implements Serializable {
 
     /*
      * this is needed for GUI, render multiple select only if this is false if this is true use the only choice
-     * 
+     *
      * @author Wulf
      */
     public boolean isSingleChoiceCollection() {
@@ -1462,7 +1487,7 @@ public class ProzesskopieForm implements Serializable {
 
     /*
      * this is needed for GUI, render multiple select only if this is false if isSingleChoiceCollection is true use this choice
-     * 
+     *
      * @author Wulf
      */
     public String getDigitalCollectionIfSingleChoice() {
@@ -1695,8 +1720,17 @@ public class ProzesskopieForm implements Serializable {
                     }
 
                     /* den Inhalt zum Titel hinzufügen */
-                    if (myField.getTitel().equals(myString) && myField.getShowDependingOnDoctype(getDocType()) && myField.getWert() != null) {
-                        gen.addToken(calcProcesstitelCheck(myField.getTitel(), myField.getWert()), ManipulationType.NORMAL);
+                    if (myField.getTitel().equals(myString) && myField.getShowDependingOnDoctype(getDocType())) {
+                        String value = myField.getWert();
+                        if (value == null) {
+                            value = "";
+                        }
+
+                        // Skip process title generation if a required field is not present
+                        if (myField.isRequired() && value.isBlank()) {
+                            return;
+                        }
+                        gen.addToken(calcProcesstitelCheck(myField.getTitel(), value), ManipulationType.NORMAL);
                     }
                 }
             }
@@ -1976,7 +2010,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * Get get temporary folder to upload to
-     * 
+     *
      * @return path to temporary folder
      */
     private Path getTemporaryFolder() {
@@ -1992,7 +2026,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * Handle the upload of a file
-     * 
+     *
      * @param event
      */
     public void uploadFile(FileUploadEvent event) {
@@ -2006,7 +2040,7 @@ public class ProzesskopieForm implements Serializable {
 
     /**
      * Save the uploaded file temporary in the tmp-folder inside of goobi in a subfolder for the user
-     * 
+     *
      * @param fileName
      * @param in
      * @throws IOException
